--- a/http-database/pom.xml
+++ b/http-database/pom.xml
@@ -17,7 +17,8 @@
     <description>http-database</description>
 
     <properties>
-        <java.version>23</java.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
     </properties>
 
     <dependencies>
