--- a/http-client/pom.xml
+++ b/http-client/pom.xml
@@ -20,6 +20,10 @@
         <maven.compiler.target>21</maven.compiler.target>
     </properties>
 
+    <modules>
+        <module>../http-shared</module>
+    </modules>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
