--- a/pom.xml
+++ b/pom.xml
@@ -70,8 +70,12 @@
             <organizationUrl>http://glabaystudios.xyz</organizationUrl>
         </developer>
     </developers>
+
     <modules>
+        <module>discord-bot</module>
         <module>http-shared</module>
+        <module>http-database</module>
+        <module>http-client</module>
     </modules>
 
     <scm>
@@ -360,12 +364,6 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-            <scope>annotationProcessor</scope>
-        </dependency>
 
         <!-- MySQL -->
 <!--        <dependency>-->
@@ -393,7 +391,7 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.1.85.Final</version>
+            <version>4.1.68.Final</version>
         </dependency>
         <dependency>
             <groupId>com.github.oshi</groupId>
@@ -402,7 +400,7 @@
         </dependency>
         <dependency>
             <groupId>xyz.glabaystudios</groupId>
-            <artifactId>Discord</artifactId>
+            <artifactId>discord-bot</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
@@ -446,6 +444,7 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
+                    <outputDirectory>target/boneyard-output</outputDirectory>
                 </configuration>
             </plugin>
 
