--- a/game-network-js5/pom.xml
+++ b/game-network-js5/pom.xml
@@ -49,5 +49,11 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.displee</groupId>
+            <artifactId>rs-cache-library</artifactId>
+            <version>7.1.5</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
